// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallModalContent should match a snapshot where an org admin and desktop mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          <a
            href="agencycloud://process/webpage?url=undefined"
          >
            Reapit Connect Management App.
          </a>
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="agencycloud://process/webpage?url=https://foo.bar"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        <a
          href="agencycloud://process/webpage?url=undefined"
        >
          Reapit Connect Management App.
        </a>
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="agencycloud://process/webpage?url=https://foo.bar"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where an org admin and web mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          <a>
            Reapit Connect Management App.
          </a>
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        <a>
          Reapit Connect Management App.
        </a>
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where app is free 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Will Test DevCo
           have specified there is no cost for using this 
          integration
          .
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Will Test DevCo
         have specified there is no cost for using this 
        integration
        .
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where has off grouping, not an org admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for your Office Group
           
          MOCK_OFFICE_GROUP
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for your Office Group
         
        MOCK_OFFICE_GROUP
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not free but no pricing details 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          There may be a cost associated to using this 
          integration
          . However, this information has not yet been provided by 
          Will Test DevCo
          . Please contact 
          Will Test DevCo
           directly for information about pricing.
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        There may be a cost associated to using this 
        integration
        . However, this information has not yet been provided by 
        Will Test DevCo
        . Please contact 
        Will Test DevCo
         directly for information about pricing.
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not off grouping, not an org admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-has-grey-text el-small-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <ul
          class="ml-4"
        >
          <li>
            Launchable from the applicant screen
          </li>
          <li>
            Provides ability to export a saved applicant to third party system
          </li>
        </ul>
        <p
          class="el-has-grey-text el-small-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://marketplace-documentation.reapit.cloud/integration-types"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <div
          class="el-grid"
        >
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
          </div>
          <div
            class="el-col"
          >
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-low el-button-fixed-width el-button"
          >
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-has-grey-text el-small-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <ul
        class="ml-4"
      >
        <li>
          Launchable from the applicant screen
        </li>
        <li>
          Provides ability to export a saved applicant to third party system
        </li>
      </ul>
      <p
        class="el-has-grey-text el-small-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <div
        class="el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read applicants
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read property images
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="app-detail-permission-chip"
          >
            Read properties
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-low el-button-fixed-width el-button"
        >
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
